fixed max-height and align? maybe?

--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ header{
 
   /* Your code here */
 
-  margin: auto;
+  align-self: center;
 
 }
 
@@ -226,8 +226,8 @@ header{
   .about-image{
     grid-column: 2 / span 2;
     grid-row: 2 / span 1;
-    max-height: 400px;
-    overflow: hidden;
+    /*max-height: 400px;
+    overflow: hidden;*/
 
   }
 
@@ -240,8 +240,8 @@ header{
   .method-image{
     grid-column: 3 / span 2;
     grid-row: 3 / span 1;
-    max-height: 400px;
-    overflow: hidden;
+    /*max-height: 400px;
+    overflow: hidden;*/
     
   }
 
@@ -253,8 +253,8 @@ header{
   .clients-image{
     grid-column: 2 / span 2;
     grid-row: 4 / span 1;
-    max-height: 400px;
-    overflow: hidden;
+    /*max-height: 400px;
+    overflow: hidden;*/
   }
 
   .clients{
@@ -266,8 +266,8 @@ header{
   .contact-image{
     grid-column: 3 / span 2;
     grid-row: 5 / span 1;
-    max-height: 400px;
-    overflow: hidden;
+    /*max-height: 400px;
+    overflow: hidden;*/
     
   }
 
